--- a/src/components/Mobilenav/Mobilenav.scss
+++ b/src/components/Mobilenav/Mobilenav.scss
@@ -35,6 +35,7 @@ li {
   overflow: hidden;
   text-align: center;
   transition: all 0.3s linear;
+  font-family: 'Lexend Peta', sans-serif;
 }
 
 .show-nav {
@@ -79,6 +80,7 @@ li {
     overflow: hidden;
     text-align: center;
     transition: all 0.3s linear;
+    font-family: 'Lexend Peta', sans-serif;
   }
   
   .show-nav {
@@ -124,6 +126,7 @@ li {
     overflow: hidden;
     text-align: center;
     transition: all 0.3s linear;
+    font-family: 'Lexend Peta', sans-serif;
   }
   
   .show-nav {
@@ -169,6 +172,7 @@ li {
     overflow: hidden;
     text-align: center;
     transition: all 0.3s linear;
+    font-family: 'Lexend Peta', sans-serif;
   }
   
   .show-nav {
@@ -214,6 +218,7 @@ li {
     overflow: hidden;
     text-align: center;
     transition: all 0.3s linear;
+    font-family: 'Lexend Peta', sans-serif;
   }
   
   .show-nav {
@@ -259,6 +264,7 @@ li {
     overflow: hidden;
     text-align: center;
     transition: all 0.3s linear;
+    font-family: 'Lexend Peta', sans-serif;
   }
   
   .show-nav {
@@ -304,6 +310,7 @@ li {
     overflow: hidden;
     text-align: center;
     transition: all 0.3s linear;
+    font-family: 'Lexend Peta', sans-serif;
   }
   
   .show-nav {
@@ -349,6 +356,7 @@ li {
     overflow: hidden;
     text-align: center;
     transition: all 0.3s linear;
+    font-family: 'Lexend Peta', sans-serif;
   }
   
   .show-nav {
@@ -438,7 +446,8 @@ li {
     height:0;
     overflow: hidden;
     text-align: center;
-    
+    transition: all 0.3s linear;
+    font-family: 'Lexend Peta', sans-serif;
   }
   
   .show-nav {
