--- a/src/components/Mobilenav/Mobilenav.scss
+++ b/src/components/Mobilenav/Mobilenav.scss
@@ -38,8 +38,25 @@ li {
   font-family: 'Lexend Peta', sans-serif;
 }
 
+.mobNav1 {
+  padding-top: 30px;
+  padding-bottom: 25px;
+}
+
+.mobNav2 {
+  padding-bottom: 25px;
+}
+
+.mobNav3 {
+  padding-bottom: 25px;
+}
+
+.mobNav4 {
+  padding-bottom: 25px;
+}
+
 .show-nav {
-  height: 100px;
+  height: 220px;
 }
 
 @media (min-width: 800px) and (max-width: 970px) {
@@ -82,9 +99,26 @@ li {
     transition: all 0.3s linear;
     font-family: 'Lexend Peta', sans-serif;
   }
-  
+
+  .mobNav1 {
+    padding-top: 30px;
+    padding-bottom: 25px;
+  }
+
+  .mobNav2 {
+    padding-bottom: 25px;
+  }
+
+  .mobNav3 {
+    padding-bottom: 25px;
+  }
+
+  .mobNav4 {
+    padding-bottom: 25px;
+  }
+
   .show-nav {
-    height: 100px;
+    height: 220px;
   }
 }  
 
@@ -128,9 +162,26 @@ li {
     transition: all 0.3s linear;
     font-family: 'Lexend Peta', sans-serif;
   }
-  
+
+  .mobNav1 {
+    padding-top: 30px;
+    padding-bottom: 25px;
+  }
+
+  .mobNav2 {
+    padding-bottom: 25px;
+  }
+
+  .mobNav3 {
+    padding-bottom: 25px;
+  }
+
+  .mobNav4 {
+    padding-bottom: 25px;
+  }
+
   .show-nav {
-    height: 100px;
+    height: 220px;
   }
 } 
 
@@ -174,9 +225,26 @@ li {
     transition: all 0.3s linear;
     font-family: 'Lexend Peta', sans-serif;
   }
-  
+
+  .mobNav1 {
+    padding-top: 30px;
+    padding-bottom: 25px;
+  }
+
+  .mobNav2 {
+    padding-bottom: 25px;
+  }
+
+  .mobNav3 {
+    padding-bottom: 25px;
+  }
+
+  .mobNav4 {
+    padding-bottom: 25px;
+  }
+
   .show-nav {
-    height: 100px;
+    height: 220px;
   }
 }
 
@@ -220,9 +288,26 @@ li {
     transition: all 0.3s linear;
     font-family: 'Lexend Peta', sans-serif;
   }
-  
+
+  .mobNav1 {
+    padding-top: 30px;
+    padding-bottom: 25px;
+  }
+
+  .mobNav2 {
+    padding-bottom: 25px;
+  }
+
+  .mobNav3 {
+    padding-bottom: 25px;
+  }
+
+  .mobNav4 {
+    padding-bottom: 25px;
+  }
+
   .show-nav {
-    height: 100px;
+    height: 220px;
   }
 }
 
@@ -266,9 +351,26 @@ li {
     transition: all 0.3s linear;
     font-family: 'Lexend Peta', sans-serif;
   }
-  
+
+  .mobNav1 {
+    padding-top: 30px;
+    padding-bottom: 25px;
+  }
+
+  .mobNav2 {
+    padding-bottom: 25px;
+  }
+
+  .mobNav3 {
+    padding-bottom: 25px;
+  }
+
+  .mobNav4 {
+    padding-bottom: 25px;
+  }
+
   .show-nav {
-    height: 100px;
+    height: 220px;
   }
 }
 
@@ -313,10 +415,27 @@ li {
     font-family: 'Lexend Peta', sans-serif;
   }
   
-  .show-nav {
-    height: 100px;
+  .mobNav1 {
+    padding-top: 30px;
+    padding-bottom: 25px;
   }
-}
+
+  .mobNav2 {
+    padding-bottom: 25px;
+  }
+
+  .mobNav3 {
+    padding-bottom: 25px;
+  }
+
+  .mobNav4 {
+    padding-bottom: 25px;
+  }
+
+  .show-nav {
+    height: 220px;
+  }
+}  
 
 @media (min-width: 378px) and (max-width: 458px) {
   li {
@@ -358,9 +477,26 @@ li {
     transition: all 0.3s linear;
     font-family: 'Lexend Peta', sans-serif;
   }
-  
+
+  .mobNav1 {
+    padding-top: 30px;
+    padding-bottom: 25px;
+  }
+
+  .mobNav2 {
+    padding-bottom: 25px;
+  }
+
+  .mobNav3 {
+    padding-bottom: 25px;
+  }
+
+  .mobNav4 {
+    padding-bottom: 25px;
+  }
+
   .show-nav {
-    height: 100px;
+    height: 220px;
   }
 }
 
@@ -403,9 +539,26 @@ li {
     text-align: center;
     transition: all 0.3s linear;
   }
-  
+
+  .mobNav1 {
+    padding-top: 30px;
+    padding-bottom: 25px;
+  }
+
+  .mobNav2 {
+    padding-bottom: 25px;
+  }
+
+  .mobNav3 {
+    padding-bottom: 25px;
+  }
+
+  .mobNav4 {
+    padding-bottom: 25px;
+  }
+
   .show-nav {
-    height: 100px;
+    height: 220px;
   }
 }
 
@@ -449,8 +602,26 @@ li {
     transition: all 0.3s linear;
     font-family: 'Lexend Peta', sans-serif;
   }
-  
-  .show-nav {
-    height: 100px;
+
+  .mobNav1 {
+    padding-top: 30px;
+    padding-bottom: 25px;
   }
+
+  .mobNav2 {
+    padding-bottom: 25px;
+  }
+
+  .mobNav3 {
+    padding-bottom: 25px;
+  }
+
+  .mobNav4 {
+    padding-bottom: 25px;
+  }
+
+  .show-nav {
+    height: 220px;
+  }
+  
 }
