--- a/src/components/Mobilenav/Mobilenav.scss
+++ b/src/components/Mobilenav/Mobilenav.scss
@@ -62,6 +62,12 @@ li {
   height: 220px;
 }
 
+@media (min-width: 1356px) and (max-width: 4000px) {
+  .mobile-navbar {
+    display: none;
+  }
+}  
+
 @media (min-width: 800px) and (max-width: 970px) {
   li {
     list-style-type: none;
