--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,135 +1,96 @@
 .footer {
-    background-color: #525962;
-    height: 90px;
+    margin-top: -30px;
 }
-
-.footerMessage {
+.socialLinks {
     text-align: center;
-    color: white;
-    font-family: 'Lexend Peta', sans-serif;
-    margin-top: 20px;
-}
-
-.socialFooter {
-    margin-top:10px;
-    text-align: center;
+    margin-top: 10px;
 }
 
 .social {
     margin-right: 20px;
-    font-size: 25px;
+    font-size: 20px;
     color: #3b5998;
-    width: 20px;
 }
 
 .social2 {
-    margin-left: 20px;
-    font-size: 25px;
-    color: #1da1f2;
-    width: 20px;
+    font-size: 20px;
+    color: #1dcaff;
 }
 
-@media (min-width: 561px) and (max-width: 2000px){
+@media (min-width: 470px) and (max-width: 570px){
     .footer {
-        background-color: #525962;
-        height: 110px;
-        margin-top: -31px;
-    }
-    
-    .footerMessage {
-        text-align: center;
-        color: white;
-        font-family: 'Lexend Peta', sans-serif;
-        margin-top: 20px;
-        font-size: 15px;
-    }
-    
-    .socialFooter {
-        margin-top:10px;
-        text-align: center;
-    }
-    
-    .social {
-        margin-right: 20px;
-        font-size: 25px;
-        color: #3b5998;
-        width: 20px;
-    }
-    
-    .social2 {
-        margin-left: 20px;
-        font-size: 25px;
-        color: #1da1f2;
-        width: 20px;
-    }
-}    
-
-@media (min-width: 470px) and (max-width: 560px){
-    .footer {
-        background-color: #525962;
-        height: 120px;
-        margin-top: -10px;
-    }
-    
-    .footerMessage {
-        text-align: center;
-        color: white;
-        font-family: 'Lexend Peta', sans-serif;
-        margin-top: 40px;
+        padding-top: 30px;
         font-size: 10px;
+        margin-bottom: -20px;
+        padding-bottom: 90px;
     }
-    
-    .socialFooter {
-        margin-top:10px;
+
+    .socialLinks {
         text-align: center;
-    }
-    
+        margin-top: 10px;
+        padding-bottom: 10px;
+    }    
+
     .social {
         margin-right: 20px;
-        font-size: 25px;
+        font-size: 20px;
         color: #3b5998;
-        width: 20px;
     }
     
     .social2 {
-        margin-left: 20px;
-        font-size: 25px;
-        color: #1da1f2;
-        width: 20px;
+        font-size: 20px;
+        color: #1dcaff;
     }
-}    
+} 
 
-@media (min-width: 300px) and (max-width: 469px){
+@media (min-width: 376px) and (max-width: 550px){
     .footer {
-        background-color: #525962;
-        height: 160px;
+        padding-top: 30px;
+        font-size: 10px;
         margin-top: -90px;
+        padding-bottom: 90px;
     }
-    
-    .footerMessage {
+
+    .socialLinks {
         text-align: center;
-        color: white;
-        font-family: 'Lexend Peta', sans-serif;
-        margin-top: 20px;
-        font-size: 10px;
-    }
-    
-    .socialFooter {
-        margin-top:10px;
-        text-align: center;
-    }
-    
+        margin-top: 10px;
+        padding-bottom: 10px;
+    }    
+
     .social {
         margin-right: 20px;
-        font-size: 25px;
+        font-size: 20px;
         color: #3b5998;
-        width: 20px;
     }
     
     .social2 {
-        margin-left: 20px;
-        font-size: 25px;
-        color: #1da1f2;
-        width: 20px;
+        font-size: 20px;
+        color: #1dcaff;
+    }
+}  
+
+@media (min-width: 321px) and (max-width: 375px){
+    .footer {
+        padding-top: 30px;
+        font-size: 10px;
+        margin-top: -80px;
+        padding-bottom: 90px;
+    }
+
+    .socialLinks {
+        text-align: center;
+        margin-top: 10px;
+        padding-bottom: 20px;
+    }    
+
+    .social {
+        margin-right: 20px;
+        font-size: 20px;
+        color: #3b5998;
+    }
+    
+    .social2 {
+        font-size: 20px;
+        color: #1dcaff;
     }
 }    
