--- a/src/sass/_reservations.scss
+++ b/src/sass/_reservations.scss
@@ -34,6 +34,11 @@
     margin-top: -80px;
 }
 
+#reservationsAnchor {
+    width: 30vw;
+    font-size: 15px;
+}
+
 @media screen and (max-width: 840px) {
     .openTable {
         margin-top: -80px;
