--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -290,7 +290,7 @@ a {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-top: -620px;
+  margin-top: -570px;
   -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
   animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
@@ -368,7 +368,7 @@ a {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-top: -550px;
+  margin-top: 2;
   -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
   animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
@@ -446,7 +446,7 @@ a {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-top: -520px;
+  margin-top: -550px;
   -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
   animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
@@ -498,7 +498,7 @@ a {
 }
 }  
 
-@media (min-width: 671px) and (max-width: 812px){
+@media (min-width: 671px) and (max-width: 879px){
 .header {
   width: 100%;
   height: 100vh;
@@ -574,7 +574,7 @@ a {
 }
 }  
 
-@media (min-width: 813px) and (max-width: 1024px){
+@media (min-width: 880px) and (max-width: 1024px){
 .header {
   width: 100%;
   height: 100vh;
@@ -598,7 +598,7 @@ a {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-top: -500px;
+  margin-top: -460px;
   -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
   animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
@@ -660,7 +660,7 @@ a {
   background-position: center center;
 }
 .acorn {
-  margin-bottom: -30px;
+  margin-bottom: 30px;
   height:80px;
   width:80px;
 }
@@ -674,7 +674,7 @@ a {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-top: -460px;
+  margin-top: -500px;
   -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
   animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
