--- a/src/sass/_seasonal.scss
+++ b/src/sass/_seasonal.scss
@@ -20,11 +20,13 @@
     grid-column-end: 5;
 }  
 
-@media (min-width: 835px) and (max-width: 1120px){
+@media (min-width: 1112px) and (max-width: 1800px){
     .seasonal {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
         height: 1700px;
+        margin-top: -60px;
+        margin-bottom: -450px;
     }
 
     .seasonalHeading {
@@ -35,7 +37,55 @@
         font-family: 'Lexend Zetta', sans-serif;
         grid-column-start: 3;
         justify-content:center;
+        margin-top: 120px;
+    }
+    
+    .dishItems {
+        margin-top: -500px;
+    }
+} 
+
+@media (min-width: 900px) and (max-width: 1111px){
+    .seasonal {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        height: 1700px;
+        margin-top: -30px;
+    }
+
+    .seasonalHeading {
+        text-align: center;
+        border-bottom: 1px solid black;
+        height: 50px;
+        width:500px;
+        font-family: 'Lexend Zetta', sans-serif;
+        grid-column-start: 3;
+        justify-content:center;
+        margin-top: 120px;
+    }
+    
+    .dishItems {
         margin-top: 20px;
+    }
+} 
+
+@media (min-width: 835px) and (max-width: 899px){
+    .seasonal {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        height: 1700px;
+        margin-top: 800px;
+    }
+
+    .seasonalHeading {
+        text-align: center;
+        border-bottom: 1px solid black;
+        height: 50px;
+        width:500px;
+        font-family: 'Lexend Zetta', sans-serif;
+        grid-column-start: 3;
+        justify-content:center;
+        margin-top: 120px;
     }
     
     .dishItems {
