--- a/src/components/Employment/employment2.scss
+++ b/src/components/Employment/employment2.scss
@@ -106,86 +106,7 @@
     width: 20px;
 }
 
-// @media (min-width: 1161px) and (max-width: 1500px){
-//     .contact {
-//         height: 100vh;
-//         background-color: #525962;
-//         display: grid;
-//         grid-template-rows: repeat(6, 1fr);
-//         grid-template-columns: repeat(9, 1fr);
-//     }
-    
-//     .contactContainer {
-//         height: 40vw;
-//         text-align: center;
-//     }
-    
-//     .contactForm {
-//         text-align: center;
-//     }
-    
-//     .fieldCon {
-//         width: 35vw;
-//     }
-    
-//     #messageForm {
-//         height: 50vh;
-//         width: 35vw;
-//     }
-    
-//     #idCon {
-//         height: 20px;
-//     }
-    
-//     .buttonEmp {
-//         background-color: #30332e;
-//         color: white;
-//         border: 1px solid white;
-//         padding: 15px 32px;
-//         text-align: center;
-//         display: inline-block;
-//         font-size: 13px;
-//         margin: 4px 2px;
-//         cursor: pointer;
-//         grid-column-start: 3;
-//         margin-top: 50px;
-//         width:70vw;
-//         height:60px;
-//         font-family: 'Lexend Zetta', sans-serif;
-//         padding-bottom: 15px;
-//         grid-column-start: 2;
-//         grid-column-end: 4;
-//         margin-top: 20px;
-//         width: 30vw;
-//     }
-    
-//     .contactHeading {
-//         color: #EDEEC9;
-//         font-family: 'Lexend Zetta', sans-serif;
-//         text-align: center;
-//         margin-left: 215px;
-//         grid-row-start: 3;
-//         margin-top: -110px;
-//         font-size: 17px;
-//         width: 65vw;
-//         border-bottom: 1px white solid;
-//         height:40px;
-//         margin-bottom: 10px;
-//         margin-top: px;
-//     }
-    
-//     .footerCon {
-//         width: 100vw;
-//         margin-bottom: -30px;
-//     }
-    
-//     #employmentButton {
-//         margin-bottom: -100px;
-//         display: none;
-//     }
-// } 
-
-@media (min-width: 601px) and (max-width: 1400px){
+@media (min-width: 1357px) and (max-width: 1600px){
     .contact {
         height: 100vh;
         background-color: #525962;
@@ -204,7 +125,6 @@
     }
     
     .fieldCon {
-        width: 35vw;
         width: 80vw;
     }
     
@@ -227,7 +147,6 @@
         margin: 4px 2px;
         cursor: pointer;
         grid-column-start: 3;
-        margin-top: 50px;
         width:70vw;
         height:60px;
         font-family: 'Lexend Zetta', sans-serif;
@@ -235,6 +154,7 @@
         grid-column-start: 2;
         grid-column-end: 4;
         margin-top: 20px;
+        margin-bottom: 80px;
     }
     
     .contactHeading {
@@ -244,12 +164,12 @@
         grid-column-start: 5;
         grid-row-start: 3;
         margin-top: -110px;
-        font-size: 12px;
-        width: 75vw;
+        font-size: 13px;
+        width: 80vw;
         border-bottom: 1px white solid;
         height:40px;
         margin-bottom: 10px;
-        margin-left: 100px;
+        margin-left: 2vw;
     }
     
     .footerCon {
@@ -260,6 +180,95 @@
     #employmentButton {
         margin-bottom: -100px;
         display: none;
+    }
+
+    .socialFooterCon {
+        margin-top: 25px;
+    }
+
+    .footerMessage {
+        margin-top: -120px;
+    }
+
+} 
+
+@media (min-width: 601px) and (max-width: 1356px){
+    .contact {
+        height: 100vh;
+        background-color: #525962;
+        display: grid;
+        grid-template-rows: repeat(6, 1fr);
+        grid-template-columns: repeat(9, 1fr);
+    }
+    
+    .contactContainer {
+        height: 40vw;
+        text-align: center;
+    }
+    
+    .contactForm {
+        text-align: center;
+    }
+    
+    .fieldCon {
+        width: 80vw;
+    }
+    
+    #messageForm {
+        height: 50vh;
+    }
+    
+    #idCon {
+        height: 20px;
+    }
+    
+    .buttonEmp {
+        background-color: #30332e;
+        color: white;
+        border: 1px solid white;
+        padding: 15px 32px;
+        text-align: center;
+        display: inline-block;
+        font-size: 13px;
+        margin: 4px 2px;
+        cursor: pointer;
+        grid-column-start: 3;
+        width:70vw;
+        height:60px;
+        font-family: 'Lexend Zetta', sans-serif;
+        padding-bottom: 15px;
+        grid-column-start: 2;
+        grid-column-end: 4;
+        margin-top: 20px;
+        margin-bottom: 80px;
+    }
+    
+    .contactHeading {
+        color: #EDEEC9;
+        font-family: 'Lexend Zetta', sans-serif;
+        text-align: center;
+        grid-column-start: 5;
+        grid-row-start: 3;
+        margin-top: -110px;
+        font-size: 13px;
+        width: 80vw;
+        border-bottom: 1px white solid;
+        height:40px;
+        margin-bottom: 10px;
+        margin-left: 0;
+    }
+    
+    .footerCon {
+        width: 100vw;
+    }
+    
+    #employmentButton {
+        margin-bottom: -100px;
+        display: none;
+    }
+
+    .footerMessage {
+        margin-bottom: 20px;
     }
 } 
 
@@ -321,7 +330,7 @@
         text-align: center;
         grid-column-start: 5;
         grid-row-start: 3;
-        margin-top: -220px;
+        margin-top: -120px;
         font-size: 12px;
         width: 95vw;
         border-bottom: 1px white solid;
@@ -335,6 +344,22 @@
     
     #employmentButton {
         margin-bottom: -100px;
+    }
+
+    .footerMessage {
+        font-size: 12px;
+    }
+
+    .socialCon {
+        font-size: 16px;
+    }
+
+    .social2Con {
+        font-size: 16px;
+    }
+
+    .socialFooterCon {
+        margin-top: 7px;
     }
 } 
 
@@ -404,12 +429,32 @@
         margin-bottom: 10px;
     }
     
+    #employmentButton {
+        margin-bottom: -100px;
+    }
+
     .footerCon {
         width: 100vw;
     }
     
     #employmentButton {
         margin-bottom: -100px;
+    }
+
+    .footerMessage {
+        font-size: 12px;
+    }
+
+    .socialCon {
+        font-size: 16px;
+    }
+
+    .social2Con {
+        font-size: 16px;
+    }
+
+    .socialFooterCon {
+        margin-top: 7px;
     }
 } 
 
@@ -480,12 +525,32 @@
         margin-bottom: 10px;
     }
     
+    #employmentButton {
+        margin-bottom: -100px;
+    }
+
     .footerCon {
         width: 100vw;
     }
     
     #employmentButton {
         margin-bottom: -100px;
+    }
+
+    .footerMessage {
+        font-size: 12px;
+    }
+
+    .socialCon {
+        font-size: 16px;
+    }
+
+    .social2Con {
+        font-size: 16px;
+    }
+
+    .socialFooterCon {
+        margin-top: 7px;
     }
 }    
 
