--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -25,7 +25,7 @@
         padding-top: 30px;
         font-size: 10px;
         margin-top: -90px;
-        padding-bottom: 120px;
+        padding-bottom: 130px;
     }
 
     .footer-message {
@@ -54,8 +54,12 @@
     .footer {
         padding-top: 30px;
         font-size: 10px;
-        margin-top: -80px;
-        padding-bottom: 90px;
+        margin-top: -90px;
+        padding-bottom: 110px;
+    }
+
+    .footer-message {
+        margin-top: 20px;
     }
 
     .socialLinks {
