--- a/src/components/Employment/employment2.scss
+++ b/src/components/Employment/employment2.scss
@@ -108,6 +108,437 @@
 
 @media (min-width: 1357px) and (max-width: 1600px){
     .contact {
+        height: 95vh;
+        background-color: #525962;
+        display: grid;
+        grid-template-rows: repeat(6, 1fr);
+        grid-template-columns: repeat(9, 1fr);
+    }
+    
+    .contactContainer {
+        height: 40vw;
+        text-align: center;
+        margin-top: 20px;
+    }
+    
+    .contactForm {
+        text-align: center;
+    }
+    
+    .fieldCon {
+        width: 80vw;
+    }
+    
+    #messageForm {
+        height: 50vh;
+    }
+    
+    #idCon {
+        height: 20px;
+    }
+    
+    .buttonEmp {
+        background-color: #30332e;
+        color: white;
+        border: 1px solid white;
+        padding: 15px 32px;
+        text-align: center;
+        display: inline-block;
+        font-size: 13px;
+        margin: 4px 2px;
+        cursor: pointer;
+        grid-column-start: 3;
+        width:70vw;
+        height:60px;
+        font-family: 'Lexend Zetta', sans-serif;
+        padding-bottom: 15px;
+        grid-column-start: 2;
+        grid-column-end: 4;
+        margin-top: 20px;
+        margin-bottom: 80px;
+    }
+    
+    .contactHeading {
+        color: #EDEEC9;
+        font-family: 'Lexend Zetta', sans-serif;
+        text-align: center;
+        grid-column-start: 5;
+        grid-row-start: 3;
+        margin-top: -110px;
+        font-size: 13px;
+        width: 80vw;
+        border-bottom: 1px white solid;
+        height:40px;
+        margin-bottom: 10px;
+        margin-left: 9.5vw;
+    }
+    
+    .footerCon {
+        width: 100vw;
+        margin-bottom: -30px;
+    }
+    
+    #employmentButton {
+        margin-bottom: -100px;
+        display: none;
+    }
+
+    .socialFooterCon {
+        margin-top: -10px;
+        padding-top: 5px;
+        padding-bottom: 40px;
+        background-color: #525962;
+        width: 99vw;
+    }
+
+    .footerMessage {
+        margin-top: -120px;
+    }
+
+} 
+
+@media (min-width: 1261px) and (max-width: 1356px){
+    .contact {
+        height: 100vh;
+        background-color: #525962;
+        display: grid;
+        grid-template-rows: repeat(6, 1fr);
+        grid-template-columns: repeat(9, 1fr);
+    }
+    
+    .contactContainer {
+        height: 40vw;
+        text-align: center;
+    }
+    
+    .contactForm {
+        text-align: center;
+    }
+    
+    .fieldCon {
+        width: 50vw;
+    }
+    
+    #messageForm {
+        height: 50vh;
+    }
+    
+    #idCon {
+        height: 20px;
+    }
+    
+    .buttonEmp {
+        background-color: #30332e;
+        color: white;
+        border: 1px solid white;
+        padding: 15px 32px;
+        text-align: center;
+        display: inline-block;
+        font-size: 13px;
+        margin: 4px 2px;
+        cursor: pointer;
+        grid-column-start: 3;
+        width:40vw;
+        height:60px;
+        font-family: 'Lexend Zetta', sans-serif;
+        padding-bottom: 15px;
+        grid-column-start: 2;
+        grid-column-end: 4;
+        margin-top: 20px;
+        margin-bottom: 80px;
+    }
+    
+    .contactHeading {
+        color: #EDEEC9;
+        font-family: 'Lexend Zetta', sans-serif;
+        text-align: center;
+        grid-column-start: 5;
+        grid-row-start: 3;
+        margin-top: -30px;
+        font-size: 13px;
+        width: 80vw;
+        border-bottom: 1px white solid;
+        height:40px;
+        margin-bottom: 10px;
+        margin-left: 0;
+    }
+    
+    .footerCon {
+        width: 100vw;
+    }
+    
+    #employmentButton {
+        margin-bottom: -100px;
+        display: none;
+    }
+
+    .footerMessage {
+        font-size: 15px;
+        margin-top: -50px;
+    }
+
+    .socialFooterCon {
+        margin-top: 10px;
+    }
+}    
+
+@media (min-width: 1151px) and (max-width: 1260px){
+    .contact {
+        height: 100vh;
+        background-color: #525962;
+        display: grid;
+        grid-template-rows: repeat(6, 1fr);
+        grid-template-columns: repeat(9, 1fr);
+    }
+    
+    .contactContainer {
+        height: 40vw;
+        text-align: center;
+    }
+    
+    .contactForm {
+        text-align: center;
+    }
+    
+    .fieldCon {
+        width: 50vw;
+    }
+    
+    #messageForm {
+        height: 50vh;
+    }
+    
+    #idCon {
+        height: 20px;
+    }
+    
+    .buttonEmp {
+        background-color: #30332e;
+        color: white;
+        border: 1px solid white;
+        padding: 15px 32px;
+        text-align: center;
+        display: inline-block;
+        font-size: 13px;
+        margin: 4px 2px;
+        cursor: pointer;
+        grid-column-start: 3;
+        width:50vw;
+        height:60px;
+        font-family: 'Lexend Zetta', sans-serif;
+        padding-bottom: 15px;
+        grid-column-start: 2;
+        grid-column-end: 4;
+        margin-top: 20px;
+        margin-bottom: 80px;
+    }
+    
+    .contactHeading {
+        color: #EDEEC9;
+        font-family: 'Lexend Zetta', sans-serif;
+        text-align: center;
+        grid-column-start: 5;
+        grid-row-start: 3;
+        margin-top: -50px;
+        font-size: 13px;
+        width: 80vw;
+        border-bottom: 1px white solid;
+        height:40px;
+        margin-bottom: 10px;
+        margin-left: 0;
+    }
+    
+    .footerCon {
+        width: 100vw;
+    }
+    
+    #employmentButton {
+        margin-bottom: -100px;
+        display: none;
+    }
+
+    .footerMessage {
+        font-size: 15px;
+        margin-top: -50px;
+    }
+
+    .socialFooterCon {
+        margin-top: 10px;
+    }
+}    
+
+@media (min-width: 1051px) and (max-width: 1150px){
+    .contact {
+        height: 100vh;
+        background-color: #525962;
+        display: grid;
+        grid-template-rows: repeat(6, 1fr);
+        grid-template-columns: repeat(9, 1fr);
+    }
+    
+    .contactContainer {
+        height: 40vw;
+        text-align: center;
+    }
+    
+    .contactForm {
+        text-align: center;
+    }
+    
+    .fieldCon {
+        width: 60vw;
+    }
+    
+    #messageForm {
+        height: 50vh;
+    }
+    
+    #idCon {
+        height: 20px;
+    }
+    
+    .buttonEmp {
+        background-color: #30332e;
+        color: white;
+        border: 1px solid white;
+        padding: 15px 32px;
+        text-align: center;
+        display: inline-block;
+        font-size: 13px;
+        margin: 4px 2px;
+        cursor: pointer;
+        grid-column-start: 3;
+        width:50vw;
+        height:60px;
+        font-family: 'Lexend Zetta', sans-serif;
+        padding-bottom: 15px;
+        grid-column-start: 2;
+        grid-column-end: 4;
+        margin-top: 20px;
+        margin-bottom: 80px;
+    }
+    
+    .contactHeading {
+        color: #EDEEC9;
+        font-family: 'Lexend Zetta', sans-serif;
+        text-align: center;
+        grid-column-start: 5;
+        grid-row-start: 3;
+        margin-top: -70px;
+        font-size: 13px;
+        width: 80vw;
+        border-bottom: 1px white solid;
+        height:40px;
+        margin-bottom: 10px;
+        margin-left: 0;
+    }
+    
+    .footerCon {
+        width: 100vw;
+    }
+    
+    #employmentButton {
+        margin-bottom: -100px;
+        display: none;
+    }
+
+    .footerMessage {
+        font-size: 15px;
+        margin-top: -50px;
+    }
+
+    .socialFooterCon {
+        margin-top: 10px;
+    }
+}   
+
+@media (min-width: 951px) and (max-width: 1050px){
+    .contact {
+        height: 100vh;
+        background-color: #525962;
+        display: grid;
+        grid-template-rows: repeat(6, 1fr);
+        grid-template-columns: repeat(9, 1fr);
+    }
+    
+    .contactContainer {
+        height: 40vw;
+        text-align: center;
+    }
+    
+    .contactForm {
+        text-align: center;
+    }
+    
+    .fieldCon {
+        width: 60vw;
+    }
+    
+    #messageForm {
+        height: 50vh;
+    }
+    
+    #idCon {
+        height: 20px;
+    }
+    
+    .buttonEmp {
+        background-color: #30332e;
+        color: white;
+        border: 1px solid white;
+        padding: 15px 32px;
+        text-align: center;
+        display: inline-block;
+        font-size: 13px;
+        margin: 4px 2px;
+        cursor: pointer;
+        grid-column-start: 3;
+        width:50vw;
+        height:60px;
+        font-family: 'Lexend Zetta', sans-serif;
+        padding-bottom: 15px;
+        grid-column-start: 2;
+        grid-column-end: 4;
+        margin-top: 20px;
+        margin-bottom: 80px;
+    }
+    
+    .contactHeading {
+        color: #EDEEC9;
+        font-family: 'Lexend Zetta', sans-serif;
+        text-align: center;
+        grid-column-start: 5;
+        grid-row-start: 3;
+        margin-top: -70px;
+        font-size: 13px;
+        width: 80vw;
+        border-bottom: 1px white solid;
+        height:40px;
+        margin-bottom: 10px;
+        margin-left: 0;
+    }
+    
+    .footerCon {
+        width: 100vw;
+    }
+    
+    #employmentButton {
+        margin-bottom: -100px;
+        display: none;
+    }
+
+    .footerMessage {
+        font-size: 15px;
+        margin-top: -50px;
+    }
+
+    .socialFooterCon {
+        margin-top: 10px;
+    }
+}    
+
+@media (min-width: 760px) and (max-width: 951px){
+    .contact {
         height: 100vh;
         background-color: #525962;
         display: grid;
@@ -163,18 +594,17 @@
         text-align: center;
         grid-column-start: 5;
         grid-row-start: 3;
-        margin-top: -110px;
+        margin-top: -90px;
         font-size: 13px;
         width: 80vw;
         border-bottom: 1px white solid;
         height:40px;
         margin-bottom: 10px;
-        margin-left: 2vw;
+        margin-left: 0;
     }
     
     .footerCon {
         width: 100vw;
-        margin-bottom: -30px;
     }
     
     #employmentButton {
@@ -182,17 +612,19 @@
         display: none;
     }
 
-    .socialFooterCon {
-        margin-top: 25px;
-    }
-
     .footerMessage {
-        margin-top: -120px;
+        font-size: 15px;
+        margin-top: -50px;
     }
 
-} 
+    .socialFooterCon {
+        margin-top: 10px;
+    }
+}    
 
-@media (min-width: 601px) and (max-width: 1356px){
+
+
+@media (min-width: 700px) and (max-width: 759px){
     .contact {
         height: 100vh;
         background-color: #525962;
@@ -268,11 +700,16 @@
     }
 
     .footerMessage {
-        margin-bottom: 20px;
+        font-size: 15px;
+        margin-top: -50px;
+    }
+
+    .socialFooterCon {
+        margin-top: 10px;
     }
 } 
 
-@media (min-width: 501px) and (max-width: 600px){
+@media (min-width: 501px) and (max-width: 699px){
     .contact {
         height: 100vh;
         background-color: #525962;
@@ -365,7 +802,9 @@
 
 @media (min-width: 401px) and (max-width: 500px){
     .contact {
-        height: 100vh;
+        padding-top: 20px;
+        margin-top: 69px;
+        height: 82vh;
         background-color: #525962;
         display: grid;
         grid-template-rows: repeat(6, 1fr);
@@ -382,12 +821,11 @@
     }
     
     .fieldCon {
-        width: 35vw;
         width: 80vw;
     }
     
     #messageForm {
-        height: 50vh;
+        height: 32vh;
     }
     
     #idCon {
@@ -436,35 +874,32 @@
     .footerCon {
         width: 100vw;
     }
-    
-    #employmentButton {
-        margin-bottom: -100px;
-    }
 
     .footerMessage {
-        font-size: 12px;
+        font-size: 10px;
     }
 
     .socialCon {
-        font-size: 16px;
+        font-size: 25px;
     }
 
     .social2Con {
-        font-size: 16px;
+        font-size: 25px;
     }
 
     .socialFooterCon {
-        margin-top: 7px;
+        margin-top: 17px;
     }
 } 
 
 @media (min-width: 321px) and (max-width: 400px){
     .contact {
-        height: 104vh;
+        height: 93vh;
         background-color: #525962;
         display: grid;
         grid-template-rows: repeat(6, 1fr);
         grid-template-columns: repeat(9, 1fr);
+        margin-top: 35px;
     }
     
     .contactContainer {
@@ -478,12 +913,11 @@
     }
     
     .fieldCon {
-        width: 35vw;
         width: 80vw;
     }
     
     #messageForm {
-        height: 50vh;
+        height: 27vh;
     }
     
     #idCon {
@@ -503,7 +937,7 @@
         grid-column-start: 3;
         margin-top: 50px;
         width:70vw;
-        height:60px;
+        height:30px;
         font-family: 'Lexend Zetta', sans-serif;
         padding-bottom: 15px;
         grid-column-start: 2;
@@ -517,7 +951,7 @@
         text-align: center;
         grid-column-start: 5;
         grid-row-start: 3;
-        margin-top: -160px;
+        margin-top: -80px;
         font-size: 12px;
         width: 95vw;
         border-bottom: 1px white solid;
