--- a/src/components/Pages/_privatedining.scss
+++ b/src/components/Pages/_privatedining.scss
@@ -247,6 +247,7 @@
         padding-top: 10px;
         background-color: #525962;
         margin-bottom: -40px;
+        display: none;
     }
     
     .socialPriv {
