--- a/src/sass/_hours.scss
+++ b/src/sass/_hours.scss
@@ -184,16 +184,16 @@
 @media (min-width: 813px) and (max-width: 980px){
     .hours {
         background-color:#525962;
-        height: 470px;
+        height: 870px;
         padding: 30px;
-        margin-top: -220px;
+        margin-top: -20px;
         margin-bottom: 30px;
     }
 
     .mobileMap {
-        margin-left: -65px;
+        margin-left: 5px;
         margin-top: 20px;
-        width: 400px;
+        width: 50pvw;
     }
     .locale {
         margin-left: 20px;
